--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -109,32 +109,32 @@
                             <descriptors>
                                 <!-- descriptors without any repository dependency -->
                                 <descriptor>mvn:org.ops4j.pax.web/pax-web-features/${pax-web.features.tesb.version}/xml/features</descriptor>
-                                <descriptor>mvn:org.apache.karaf.decanter/apache-karaf-decanter/${decanter.tesb.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.karaf.decanter/apache-karaf-decanter/${decanter.features.tesb.version}/xml/features</descriptor>
 
                                 <descriptor>mvn:org.hibernate/hibernate-osgi/5.2.18.Final/xml/karaf</descriptor>
-                                <descriptor>mvn:org.apache.karaf.features/enterprise-legacy/${karaf.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.karaf.features/enterprise-legacy/${enterprise-legacy.features.tesb.version}/xml/features</descriptor>
 
-                                <descriptor>mvn:org.apache.cxf.karaf/apache-cxf/${cxf.tesb.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.cxf.karaf/apache-cxf/${cxf.features.tesb.version}/xml/features</descriptor>
 
-                                <descriptor>mvn:org.apache.jclouds.karaf/jclouds-karaf/${jclouds.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.jclouds.karaf/jclouds-karaf/${jclouds.features.tesb.version}/xml/features</descriptor>
 <!--                                <repository>mvn:org.ops4j.pax.cdi/pax-cdi-features/1.1.3/xml/features</repository>-->
-                                <repository>mvn:ca.uhn.hapi.fhir.karaf/hapi-fhir/3.5.0/xml/features</repository>
+                                <repository>mvn:ca.uhn.hapi.fhir.karaf/hapi-fhir/${hapi-fhir.features.tesb.version}/xml/features</repository>
                                 <descriptor>mvn:org.apache.camel.karaf/apache-camel/${camel.features.tesb.version}/xml/features</descriptor>
 
-                                <descriptor>mvn:org.hibernate.validator/hibernate-validator-osgi-karaf-features/6.1.5.Final/xml/features</descriptor>
-                                <descriptor>mvn:org.ops4j.pax.jdbc/pax-jdbc-features/1.4.4/xml/features</descriptor>
-                                <descriptor>mvn:org.ops4j.pax.jms/pax-jms-features/1.0.7/xml/features</descriptor>
-                                <descriptor>mvn:org.ops4j.pax.transx/pax-transx-features/0.4.4/xml/features</descriptor>
-                                <descriptor>mvn:org.apache.aries.jpa/jpa-features/2.7.2/xml/features</descriptor>
-                                <descriptor>mvn:org.apache.openjpa/openjpa-features/3.1.1/xml/features</descriptor>
-                                <descriptor>mvn:org.apache.karaf.features/enterprise/${karaf.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.hibernate.validator/hibernate-validator-osgi-karaf-features/${hibernate-validator-osgi-karaf-features.features.tesb.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.ops4j.pax.jdbc/pax-jdbc-features/${pax-jdbc-features.features.tesb.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.ops4j.pax.jms/pax-jms-features/${pax-jms-features.features.tesb.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.ops4j.pax.transx/pax-transx-features/${pax-transx-features.tesb.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.aries.jpa/jpa-features/${jpa-features.features.tesb.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.openjpa/openjpa-features/${openjpa-features.features.tesb.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.karaf.features/enterprise/${enterprise.features.tesb.version}/xml/features</descriptor>
 
                                 <descriptor>mvn:org.apache.karaf.features/standard/${standard.features.tesb.version}/xml/features</descriptor>
                                 <descriptor>mvn:org.apache.karaf.features/framework/${framework.features.tesb.version}/xml/features</descriptor>
 
                                 <!-- repository with dependencies already declared above -->
-                                <descriptor>mvn:org.apache.karaf.features/spring/${karaf.version}/xml/features</descriptor>
-                                <descriptor>mvn:org.apache.karaf.features/spring-legacy/${karaf.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.karaf.features/spring/${spring.features.tesb.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.karaf.features/spring-legacy/${spring-legacy.features.tesb.version}/xml/features</descriptor>
 
                                 <!-- repository with dependencies -->
                                 <descriptor>mvn:org.apache.activemq/activemq-karaf/${activemq.features.tesb.version}/xml/features-core</descriptor>
