--- a/examples/tesb/ebook/pom.xml
+++ b/examples/tesb/ebook/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
-            <version>${osgi.version}</version>
+            <version>${osgi.core.version}</version>
         </dependency>
 
         <dependency>
@@ -69,8 +69,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
