--- a/examples/camel/jaxrs-jms-http/client/pom.xml
+++ b/examples/camel/jaxrs-jms-http/client/pom.xml
@@ -58,7 +58,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-jetty9</artifactId>
+            <artifactId>camel-jetty</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
