--- a/examples/camel/jaxrs-jms-http/pom.xml
+++ b/examples/camel/jaxrs-jms-http/pom.xml
@@ -47,7 +47,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
-                <artifactId>camel-jetty9</artifactId>
+                <artifactId>camel-jetty</artifactId>
                 <version>${camel.version}</version>
             </dependency>
             <dependency>
@@ -132,7 +132,6 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
