--- a/examples/camel/jaxrs-jms-http/server/pom.xml
+++ b/examples/camel/jaxrs-jms-http/server/pom.xml
@@ -44,7 +44,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-jetty9</artifactId>
+            <artifactId>camel-jetty</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -106,7 +106,7 @@
                 </configuration>
             </plugin>
         </plugins>
-        
+
     </build>
-    
+
 </project>
