--- a/examples/cxf/jaxrs-jaxws-transformations/common/pom.xml
+++ b/examples/cxf/jaxrs-jaxws-transformations/common/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.apache.cxf.xjc-utils</groupId>
             <artifactId>cxf-xjc-runtime</artifactId>
-            <version>${cxf.xjc.version}</version>
+            <version>${cxf.xjc-utils.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>jakarta.activation</groupId>
