--- a/examples/tesb/library-service/client/pom.xml
+++ b/examples/tesb/library-service/client/pom.xml
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>org.apache.cxf.xjc-utils</groupId>
             <artifactId>cxf-xjc-runtime</artifactId>
-            <version>${cxf.xjc.version}</version>
+            <version>${cxf.xjc-utils.version}</version>
         </dependency>
 
         <!-- Third parties -->
@@ -91,7 +91,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
-        </dependency>        
+        </dependency>
 
         <!-- logging -->
         <dependency>
@@ -114,8 +114,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
         </dependency>
 
     </dependencies>
