--- a/examples/tesb/sam/sam-example-client/pom.xml
+++ b/examples/tesb/sam/sam-example-client/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.apache.cxf.xjc-utils</groupId>
             <artifactId>cxf-xjc-runtime</artifactId>
-            <version>${cxf.xjc.version}</version>
+            <version>${cxf.xjc-utils.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -34,8 +34,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
