--- a/examples/tesb/sam/sam-example-osgi/pom.xml
+++ b/examples/tesb/sam/sam-example-osgi/pom.xml
@@ -23,13 +23,12 @@
         <dependency>
             <groupId>org.apache.cxf.xjc-utils</groupId>
             <artifactId>cxf-xjc-runtime</artifactId>
-            <version>${cxf.xjc.version}</version>
+            <version>${cxf.xjc-utils.version}</version>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-			<version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
