--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -38,9 +38,6 @@
         <tag_label />
         <!-- used for assembly & dependency type, overwritten by dev-unix-assembly-only & dev-win-assembly-only profiles -->
         <assembly.formats>tar.gz,zip</assembly.formats>
-        <pax-logging.tesb.version>1.11.7.tesb1</pax-logging.tesb.version>
-        <camel-mqtt.tesb.version>2.25.2.tesb1</camel-mqtt.tesb.version>
-
         <file-extensions.to-clean>xml|cfg|war</file-extensions.to-clean>
     </properties>
 
@@ -109,16 +106,16 @@
                             <descriptors>
                                 <!-- descriptors without any repository dependency -->
                                 <descriptor>mvn:org.ops4j.pax.web/pax-web-features/${pax-web.features.tesb.version}/xml/features</descriptor>
-                                <descriptor>mvn:org.apache.karaf.decanter/apache-karaf-decanter/${decanter.features.tesb.version}/xml/features</descriptor>
+<!--                                <descriptor>mvn:org.apache.karaf.decanter/apache-karaf-decanter/${decanter.features.tesb.version}/xml/features</descriptor>-->
 
-                                <descriptor>mvn:org.hibernate/hibernate-osgi/5.2.18.Final/xml/karaf</descriptor>
-                                <descriptor>mvn:org.apache.karaf.features/enterprise-legacy/${enterprise-legacy.features.tesb.version}/xml/features</descriptor>
+<!--                                <descriptor>mvn:org.hibernate/hibernate-osgi/5.2.18.Final/xml/karaf</descriptor>-->
+<!--                                <descriptor>mvn:org.apache.karaf.features/enterprise-legacy/${enterprise-legacy.features.tesb.version}/xml/features</descriptor>-->
 
                                 <descriptor>mvn:org.apache.cxf.karaf/apache-cxf/${cxf.features.tesb.version}/xml/features</descriptor>
 
                                 <descriptor>mvn:org.apache.jclouds.karaf/jclouds-karaf/${jclouds.features.tesb.version}/xml/features</descriptor>
-<!--                                <repository>mvn:org.ops4j.pax.cdi/pax-cdi-features/1.1.3/xml/features</repository>-->
-                                <repository>mvn:ca.uhn.hapi.fhir.karaf/hapi-fhir/${hapi-fhir.features.tesb.version}/xml/features</repository>
+<!--&lt;!&ndash;                                <repository>mvn:org.ops4j.pax.cdi/pax-cdi-features/1.1.3/xml/features</repository>&ndash;&gt;-->
+<!--                                <repository>mvn:ca.uhn.hapi.fhir.karaf/hapi-fhir/${hapi-fhir.features.tesb.version}/xml/features</repository>-->
                                 <descriptor>mvn:org.apache.camel.karaf/apache-camel/${camel.features.tesb.version}/xml/features</descriptor>
 
                                 <descriptor>mvn:org.hibernate.validator/hibernate-validator-osgi-karaf-features/${hibernate-validator-osgi-karaf-features.features.tesb.version}/xml/features</descriptor>
@@ -145,7 +142,8 @@
                             <repository>target/features-repo</repository>
                             <resolveDefinedRepositoriesRecursively>false</resolveDefinedRepositoriesRecursively>
                             <features>
-                                <feature>^(?!camel-cdi|cxf-jaxrs-cdi|camel-ignite|camel-json-validator|camel-zookeeper-master|pax-jms-artemis$).*</feature>
+                                <!-- list of features to ignore -->
+                                <feature>^(?!camel-cdi|cxf-jaxrs-cdi|camel-ignite|camel-json-validator|camel-zookeeper-master|pax-jms-artemis|activemq-camel$).*</feature>
                             </features>
                         </configuration>
                     </execution>
@@ -210,6 +208,7 @@
                             <goal>unpack</goal>
                         </goals>
                         <configuration>
+                            <skip>true</skip>
                             <artifactItems>
                                 <artifactItem>
                                     <groupId>org.apache.camel</groupId>
@@ -455,6 +454,7 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
+<!--                            <skipAssembly>true</skipAssembly>-->
                             <descriptors>
                                 <descriptor>src/main/descriptors/assembly.xml</descriptor>
                             </descriptors>
