--- a/examples/tesb/camel-jmx/service/pom.xml
+++ b/examples/tesb/camel-jmx/service/pom.xml
@@ -47,7 +47,7 @@
 		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.apache.activemq</groupId>-->
-<!--			<artifactId>activemq-osgi</artifactId>-->
+<!--			<artifactId>activemq-client</artifactId>-->
 <!--		</dependency>-->
 		<!-- Override the Xstream for a CVE issue TESB-32102 -->
 		<dependency>
@@ -93,6 +93,17 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>-Dcom.sun.management.jmxremote.port=9913</argLine>
+					<argLine>-Dcom.sun.management.jmxremote.authenticate=false</argLine>
+					<argLine>-Dcom.sun.management.jmxremote.ssl=false</argLine>
+					<argLine>-Djava.rmi.server.hostname=localhost</argLine>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.camel</groupId>
 				<artifactId>camel-maven-plugin</artifactId>
