--- a/pom.xml
+++ b/pom.xml
@@ -669,7 +669,7 @@
         <profile>
             <id>examples</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <modules>
                 <module>examples</module>
