--- a/examples/camel/claimcheck/server/pom.xml
+++ b/examples/camel/claimcheck/server/pom.xml
@@ -67,7 +67,7 @@
 
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-osgi</artifactId>
+            <artifactId>activemq-client</artifactId>
         </dependency>
         <!-- Override the Xstream for a CVE issue TESB-32102 -->
         <dependency>
