--- a/examples/camel/jaxrs-jms-http/server/pom.xml
+++ b/examples/camel/jaxrs-jms-http/server/pom.xml
@@ -57,7 +57,7 @@
 
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-osgi</artifactId>
+            <artifactId>activemq-client</artifactId>
             <scope>runtime</scope>
         </dependency>
         <!-- Override the Xstream for a CVE issue TESB-32102 -->
