--- a/examples/camel/jaxws-jms/server/pom.xml
+++ b/examples/camel/jaxws-jms/server/pom.xml
@@ -37,7 +37,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-osgi</artifactId>
+            <artifactId>activemq-client</artifactId>
             <scope>runtime</scope>
         </dependency>
         <!-- Override the Xstream for a CVE issue TESB-32102 -->
