--- a/examples/cxf/jaxrs-jms-http/client/pom.xml
+++ b/examples/cxf/jaxrs-jms-http/client/pom.xml
@@ -65,7 +65,7 @@
 
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-osgi</artifactId>
+            <artifactId>activemq-client</artifactId>
             <scope>runtime</scope>
             <exclusions>
                 <exclusion>
