--- a/examples/cxf/jaxws-jms-spec/service/pom.xml
+++ b/examples/cxf/jaxws-jms-spec/service/pom.xml
@@ -62,7 +62,7 @@
 
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-osgi</artifactId>
+            <artifactId>activemq-client</artifactId>
             <scope>runtime</scope>
             <exclusions>
                 <exclusion>
