--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -88,7 +88,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.activemq</groupId>
-                <artifactId>activemq-osgi</artifactId>
+                <artifactId>activemq-client</artifactId>
                 <version>${activemq.version}</version>
                 <exclusions>
                     <exclusion>
