APPINT-31368 Initial implementation of secured keystore properties.

--- a/auxiliary-storage/service-rest/pom.xml
+++ b/auxiliary-storage/service-rest/pom.xml
@@ -93,6 +93,12 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.talend.cxf</groupId>
+            <artifactId>crypto-config</artifactId>
+            <version>${cxf-crypto-config.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
