--- a/auxiliary-storage/client/pom.xml
+++ b/auxiliary-storage/client/pom.xml
@@ -136,6 +136,12 @@
             <version>${jackson.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.talend.cxf</groupId>
+            <artifactId>crypto-config</artifactId>
+            <version>${cxf-crypto-config.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
