--- a/sts/sts-config/pom.xml
+++ b/sts/sts-config/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
+        <dependency>
+            <groupId>org.talend.cxf</groupId>
+            <artifactId>crypto-config</artifactId>
+            <version>${cxf-crypto-config.version}</version>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
