feat(TESB-32423): spring version + activemq + zookeeper

--- a/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -68,8 +68,8 @@ featuresBoot=\
     cxf, \
     cxf-jackson, \
     cxf-commands), \
-    activemq-client, \
     camel, \
+    camel-activemq, \
     camel-cxf, \
     camel-jms,\
     camel-xstream,\
