--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -250,6 +250,7 @@
                                     <groupId>org.apache.zookeeper</groupId>
                                     <artifactId>zookeeper</artifactId>
                                     <version>${zookeeper.version}</version>
+                                    <classifier>bin</classifier>
                                     <type>tar.gz</type>
                                     <outputDirectory>target/dependencies/zookeeper</outputDirectory>
                                 </artifactItem>
