feat(TESB-32423): set back aries-blueprint-spring and remove activemq-client

--- a/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -47,6 +47,7 @@ featuresBoot=\
     log, \
     ssh, \
     aries-blueprint, \
+    aries-blueprint-spring, \
     framework, \
     system, \
     feature, \
