--- a/auxiliary-storage/pom.xml
+++ b/auxiliary-storage/pom.xml
@@ -44,7 +44,7 @@
         <build.helper.plugin.version>1.7</build.helper.plugin.version>
         <exec.plugin.version>1.2.1</exec.plugin.version>
 
-        <commons-io.version>2.6</commons-io.version>
+        <commons-io.version>2.8.0</commons-io.version>
 
         <xmlParserAPIs.version>2.0.2</xmlParserAPIs.version>
         <concurrent.version>1.3.4_1</concurrent.version>
@@ -58,7 +58,7 @@
         <!-- persistence -->
         <jcr-version>2.0</jcr-version>
         <jackrabbit.version>2.18.6</jackrabbit.version>
-        <tika-core.version>1.24.1</tika-core.version>
+        <tika.version>1.25</tika.version>
 
     </properties>
 
