--- a/security-common/pom.xml
+++ b/security-common/pom.xml
@@ -14,6 +14,11 @@
     <artifactId>security-common</artifactId>
     <packaging>bundle</packaging>
     <name>Talend ESB :: Security :: Common</name>
+    <version>${revision}</version>
+
+    <properties>
+        <revision>${security-common.version}</revision>
+    </properties>
 
     <dependencies>
         <dependency>
