--- a/auxiliary-storage/service-rest/pom.xml
+++ b/auxiliary-storage/service-rest/pom.xml
@@ -146,6 +146,11 @@
                                     <type>cfg</type>
                                     <classifier>org.talend.esb.auxiliary.storage.service</classifier>
                                 </artifact>
+                                <artifact>
+                                    <file>etc/org.talend.esb.auxiliary.storage.service.sig.keystore.cfg</file>
+                                    <type>cfg</type>
+                                    <classifier>org.talend.esb.auxiliary.storage.service.sig.keystore</classifier>
+                                </artifact>
                             </artifacts>
                         </configuration>
                     </execution>
