--- a/sam/sam-agent/pom.xml
+++ b/sam/sam-agent/pom.xml
@@ -175,6 +175,11 @@
                                     <classifier>org.talend.esb.sam.agent</classifier>
                                 </artifact>
                                 <artifact>
+                                    <file>etc/org.talend.esb.sam.agent.keystore.cfg</file>
+                                    <type>cfg</type>
+                                    <classifier>org.talend.esb.sam.agent.keystore</classifier>
+                                </artifact>
+                                <artifact>
                                     <file>etc/org.talend.esb.sam.agent.client.ut.policy</file>
                                     <type>policy</type>
                                     <classifier>org.talend.esb.sam.agent.client.ut</classifier>
