--- a/sam/sam-service-rest/pom.xml
+++ b/sam/sam-service-rest/pom.xml
@@ -163,6 +163,11 @@
                                     <classifier>org.talend.esb.sam.service.rest</classifier>
                                 </artifact>
                                 <artifact>
+                                    <file>etc/org.talend.esb.sam.service.rest.keystore.cfg</file>
+                                    <type>cfg</type>
+                                    <classifier>org.talend.esb.sam.service.rest.keystore</classifier>
+                                </artifact>
+                                <artifact>
                                     <file>etc/keystores/clientKeystore.properties</file>
                                     <type>properties</type>
                                     <classifier>clientKeystore</classifier>
