--- a/sam/sam-service-soap/pom.xml
+++ b/sam/sam-service-soap/pom.xml
@@ -116,6 +116,11 @@
                                     <classifier>org.talend.esb.sam.service.soap</classifier>
                                 </artifact>
                                 <artifact>
+                                    <file>etc/org.talend.esb.sam.service.soap.keystore.cfg</file>
+                                    <type>cfg</type>
+                                    <classifier>org.talend.esb.sam.service.soap.keystore</classifier>
+                                </artifact>
+                                <artifact>
                                     <file>etc/org.talend.esb.sam.service.soap.ut.policy</file>
                                     <type>policy</type>
                                     <classifier>org.talend.esb.sam.service.soap.ut</classifier>
