--- a/examples/tesb/camel-jmx/service/pom.xml
+++ b/examples/tesb/camel-jmx/service/pom.xml
@@ -37,6 +37,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-management</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-xpath</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
