feat(APPINT-32423): fix conflicting export packages org.apache.zookeeper.* from splitted bundles org.apache.zookeeper & org.apache.zookeeper-jute

--- a/locator-auth/pom.xml
+++ b/locator-auth/pom.xml
@@ -30,25 +30,13 @@
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
             <version>${zookeeper.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.jms</groupId>
-                    <artifactId>jms</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.sun.jdmk</groupId>
-                    <artifactId>jmxtools</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.sun.jmx</groupId>
-                    <artifactId>jmxri</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.github.spotbugs</groupId>
-                    <artifactId>spotbugs-annotations</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper-jute</artifactId>
+            <version>${zookeeper.version}</version>
+        </dependency>
+        
 
         <dependency>
             <groupId>org.osgi</groupId>
@@ -85,7 +73,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Fragment-Host>org.apache.hadoop.zookeeper</Fragment-Host>
+                        <Fragment-Host>org.apache.zookeeper</Fragment-Host>
                         <Import-Package>!org.apache.zookeeper.*, *</Import-Package>
                     </instructions>
                 </configuration>
