--- a/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -51,6 +51,7 @@ featuresBoot=\
     framework, \
     system, \
     feature, \
+    talend-common-dependencies, \
     shell, \
     management, \
     service, \
@@ -69,7 +70,6 @@ featuresBoot=\
     cxf-jackson, \
     cxf-commands), \
     camel, \
-    camel-activemq, \
     camel-cxf, \
     camel-jms,\
     camel-xstream,\
