--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
 
     <properties>
         <packages.version>${project.version}</packages.version>
+        <!-- karaf version -->
         <karaf.version>4.2.11</karaf.version>
         <standard.features.tesb.version>${karaf.version}</standard.features.tesb.version>
         <framework.features.tesb.version>${karaf.version}</framework.features.tesb.version>
@@ -99,6 +100,8 @@
         <enterprise-legacy.features.tesb.version>${karaf.version}</enterprise-legacy.features.tesb.version>
         <spring.features.tesb.version>${karaf.version}</spring.features.tesb.version>
         <spring-legacy.features.tesb.version>${karaf.version}</spring-legacy.features.tesb.version>
+        
+        <!-- core libraries versions -->
         <camel.version>3.9.0</camel.version>
         <camel.features.tesb.version>${camel.version}</camel.features.tesb.version>
         <cxf.version>3.4.3</cxf.version>
@@ -113,6 +116,9 @@
         <jclouds.version>2.1.2</jclouds.version>
         <jclouds.features.tesb.version>${jclouds.version}</jclouds.features.tesb.version>
         <zookeeper.version>3.5.9</zookeeper.version>
+                
+        <jackson.version>2.11.4</jackson.version>
+        <groovy.version>3.0.3</groovy.version>
         <hapi-fhir.features.tesb.version>3.5.0</hapi-fhir.features.tesb.version>
         <hibernate-validator-osgi-karaf-features.features.tesb.version>7.0.1.Final</hibernate-validator-osgi-karaf-features.features.tesb.version>
         <pax-jdbc-features.features.tesb.version>1.4.4</pax-jdbc-features.features.tesb.version>
@@ -120,19 +126,16 @@
         <pax-transx-features.tesb.version>0.5.0</pax-transx-features.tesb.version>
         <jpa-features.features.tesb.version>2.7.2</jpa-features.features.tesb.version>
         <openjpa-features.features.tesb.version>3.1.1</openjpa-features.features.tesb.version>
-
-        <commons-codec.version>1.15</commons-codec.version>
+        
         <derby.version>10.14.2.0</derby.version>
         <derby.servicemix.version>10.14.2.0_2</derby.servicemix.version>
         <slf4j.version>1.7.12</slf4j.version>
         <commons-lang.version>2.6</commons-lang.version>
-        <commons-lang3.version>3.11</commons-lang3.version>
         <dom4j.bundle.version>2.1.3_1</dom4j.bundle.version>
         <jaxen.bundle.version>1.2.0</jaxen.bundle.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
         <commons-pool.version>1.6</commons-pool.version>
         <pax-jdbc.version>1.3.4</pax-jdbc.version>
-        <!-- check compatible version -->
         <commons-dbcp.version>1.4</commons-dbcp.version>
         <commons-dbcp.bundle.version>1.4_3</commons-dbcp.bundle.version>
         <commons-collections.version>3.2.2</commons-collections.version>
@@ -142,7 +145,7 @@
         <osgi.core.version>6.0.0</osgi.core.version>
         <osgi.compendium.version>5.0.0</osgi.compendium.version>
         <jetty.version>9.4.39.v20210325</jetty.version>
-        <oscache.bundle.version>2.4_5</oscache.bundle.version>
+        <oscache.bundle.version>2.4_5</oscache.bundle.version> 
         <cglib.bundle.version>3.2.9_1</cglib.bundle.version>
         <ibatis-sqlmap.bundle.version>2.3.4.726_4</ibatis-sqlmap.bundle.version>
         <jolokia.version>1.6.2</jolokia.version>
@@ -165,7 +168,6 @@
         <xerces.version>2.12.0_1</xerces.version>
         <log4j.version>1.2.17</log4j.version>
         <javax-annotation.version>1.3.1</javax-annotation.version>
-        <jackson.version>2.11.4</jackson.version>
         <qpid-jms.version>0.11.1</qpid-jms.version>
         <sparkjava-core.version>2.6.0_1</sparkjava-core.version>
         <mustache-compiler.version>0.9.5_1</mustache-compiler.version>
@@ -174,10 +176,43 @@
         <cxf.xjc-utils.version>3.3.1</cxf.xjc-utils.version>
         <cxf.resources.base.path/>
         <cxf.checkstyle.extension/>
-
+        
         <bundle.plugin.version>2.4.0</bundle.plugin.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        
+        <!-- bundles with potential version conflicts, set here latest version from all potential conflicting bundles -->
+        <apache-mime4j-core.version>0.8.3</apache-mime4j-core.version>
+        <bcp.version>1.68</bcp.version>
+        <brave.version>5.13.3</brave.version>
+        <commons-codec.version>1.15</commons-codec.version>
+        <commons-collections4.version>4.4</commons-collections4.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
+        <commons-text.version>1.9</commons-text.version>
+        <gson.version>2.8.5</gson.version>
+        <guava.version>30.1-jre</guava.version>
+        <httpcore-osgi.version>4.4.14</httpcore-osgi.version>
+        <javassist.version>3.27.0-GA</javassist.version>
+        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <javax.interceptor-api.version>1.2.2</javax.interceptor-api.version>
+        <javax.persistence.version>2.2.0</javax.persistence.version>
+        <jboss-logging.version>3.4.1.Final</jboss-logging.version>
+        <joda-time.version>2.10.6</joda-time.version>
+        <mina-core.version>2.1.4</mina-core.version>
+        <org.apache.aries.spifly.dynamic.bundle.version>1.3.2</org.apache.aries.spifly.dynamic.bundle.version>
+        <org.apache.servicemix.bundles.aopalliance.version>1.0_6</org.apache.servicemix.bundles.aopalliance.version>
+        <org.apache.servicemix.bundles.aspectj.version>1.9.5_1</org.apache.servicemix.bundles.aspectj.version>
+        <org.apache.servicemix.bundles.cglib.version>3.3.0_1</org.apache.servicemix.bundles.cglib.version>
+        <org.apache.servicemix.bundles.javax-inject.version>1_3</org.apache.servicemix.bundles.javax-inject.version>
+        <org.apache.servicemix.bundles.jaxb-runtime.version>2.3.2_1</org.apache.servicemix.bundles.jaxb-runtime.version>
+        <org.apache.servicemix.bundles.jsch.version>0.1.55_1</org.apache.servicemix.bundles.jsch.version>
+        <org.apache.servicemix.bundles.jzlib.version>1.1.3_2</org.apache.servicemix.bundles.jzlib.version>
+        <org.apache.servicemix.bundles.reflections.version>0.9.12_1</org.apache.servicemix.bundles.reflections.version>
+        <org.apache.servicemix.specs.jaxrs-api-2.1.version>2.9.1</org.apache.servicemix.specs.jaxrs-api-2.1.version>
+        <snakeyaml.version>1.28</snakeyaml.version>
+        <websocket.version>9.4.38.v20210224</websocket.version>
+        <zipkin.version>2.23.2</zipkin.version>
+        <zipkin-reporter.version>2.16.3</zipkin-reporter.version>
     </properties>
 
     <modules>
