bugfix(TPRUN-1099): Error on runtime start: Could not start the servlet context for context path []
upgrade pax-web to 7.2.21 compatible with jetty 9.4.35

--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
         <osgi.core.version>6.0.0</osgi.core.version>
         <osgi.compendium.version>5.0.0</osgi.compendium.version>
         <jetty.version>9.4.35.v20201120</jetty.version>
-        <pax.web.version>7.2.12</pax.web.version>
+        <pax-web.version>7.2.21</pax-web.version>
         <oscache.bundle.version>2.4_5</oscache.bundle.version>
         <cglib.bundle.version>3.2.4_1</cglib.bundle.version>
         <ibatis-sqlmap.bundle.version>2.3.4.726_4</ibatis-sqlmap.bundle.version>
@@ -679,7 +679,7 @@
             <id>patch</id>
             <properties>
                 <original.version>7.3.1</original.version>
-                <features.version>7.3.1.20210521</features.version>
+                <features.version>7.3.1.20210618</features.version>
                 <auxiliary-storage-features.version>7.3.1.20210521</auxiliary-storage-features.version>
                 <sts-config.version>7.3.1.20210224</sts-config.version>
                 <job-controller.version>7.3.1.20210224</job-controller.version>
